5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1807_2563.log
== TEST (2019-06-05 22:27:50) 
-- CODE:
vet=array(eval(input("Difite as notas dos alunos: ")))
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:28:48) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:09) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1
	for elemento < 7 
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- ERROR:
File "XXXX", line 5
    while size(vet) > 1
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:10:11) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1
	for elemento < 7 
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- EXECUTION TIME:
0.776771
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 5
    while size(vet) > 1
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:10:12) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1
	for elemento < 7 
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- EXECUTION TIME:
1.86771
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 5
    while size(vet) > 1
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:16) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1:
	for elemento < 7 
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- ERROR:
File "XXXX", line 6
    for elemento < 7 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:40) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1:
	
	for elemento < 7 
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- ERROR:
File "XXXX", line 7
    for elemento < 7 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:11:03) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1:
	
	for elemento in vet:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:52) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(MEDIA)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:04) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(aprovados)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:16) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(aprovados)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:54) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:32:35) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:32:50) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:51:01) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1:
	
	for elemento in vet:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- EXECUTION TIME:
862.749
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:51:01) 
-- CODE:
from numpy import*
vet=array(eval(input("Difite as notas dos alunos: ")))

aprovados = 0
while size(vet) > 1:
	
	for elemento in vet:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(vet)

-- EXECUTION TIME:
862.731
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:16) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2923.31
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:289: creating new parent process caused "container_linux.go:1657: running lstat on namespace path \"/proc/77896/ns/ipc\" caused \"lstat /proc/77896/ns/ipc: no such file or directory\"": unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2220.84
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Difite as notas dos alunos:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- EXECUTION TIME:
2206.09
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2922.91
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2220.21
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(MEDIA)

-- EXECUTION TIME:
3047.87
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(MEDIA)

-- EXECUTION TIME:
3047.38
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Difite as notas dos alunos: [6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2924.54
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
task 7e2d0457647b5a15d3214855ce977fc61360df7cab47d1d15864c737031f5fb8 not found: not found
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:39) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
	print(MEDIA)

-- EXECUTION TIME:
3047.29
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Difite as notas dos alunos: [6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6.  6.9 5.5 5.2]
[6.3 6.4 6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:40) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- EXECUTION TIME:
2221.98
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:40) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- EXECUTION TIME:
2210.8
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:40) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- EXECUTION TIME:
2207.52
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:44) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(aprovados)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:30) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Digite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(elemento)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:22:20) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- EXECUTION TIME:
784.933
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Difite as notas dos alunos:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:22:20) 
-- CODE:
from numpy import*
MEDIA=array(eval(input("Difite as notas dos alunos: ")))


while size(MEDIA) > 1:
	aprovados = 0
	for elemento in MEDIA:
		if ( 5 <= elemento < 7 ):
			aprovados += 1
print(media)

-- EXECUTION TIME:
784.77
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Difite as notas dos alunos:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:05:56) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
0.831133
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:05:57) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.21689
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:05:58) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.75643
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:06:00) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
2.2683
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:06:01) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
4.94749
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:06:02) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
5.31671
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:06:03) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
3.33775
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:06:03) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
3.82108
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:06:42) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- ERROR:
File "XXXX", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:04) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
0.942635
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
4
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:06) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.52977
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:08) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
2.42932
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:12) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
2.8341
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:13) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
4.79707
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:17) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
10.8297
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:27) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
9.27522
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:28) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
9.16699
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:28) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
7.79508
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
4
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:29) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
6.31176
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:29) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
6.33675
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:07:29) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
5.98242
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:04) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.54973
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
4
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:08) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.65167
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:09) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
3.62266
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:11) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
6.23015
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:12) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
8.9254
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
5
3
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:15) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
9.13653
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:29) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
10.6105
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:30) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
9.49769
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:31) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
8.29842
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:32) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
6.89308
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:33) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
7.23957
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:34) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
5.55166
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
3
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:50) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
5.24868
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:51) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
4.49119
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:24:51) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
5.3471
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2563/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:35) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
1.74563
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:32:35) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: ")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite: ")))

-- EXECUTION TIME:
2.02144
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
